--- a/style.css
+++ b/style.css
@@ -21,6 +21,13 @@ body {
   margin: 20px;
 }
 
+.div_green {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+  margin: 20px;
+}
+
 
 
 	
