--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ body {
   margin: 20px;
 }
 
+.div_blue {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  margin: 20px;
+}
 
 
 	
