--- a/style.css
+++ b/style.css
@@ -35,5 +35,12 @@ body {
   margin: 20px;
 }
 
+.div_yellow {
+  width: 100px;
+  height: 100px;
+  background-color: yellow;
+  margin: 20px;
+}
+
 
 	
