--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ body {
   margin: 20px;
 }
 
+.div_grey {
+  width: 100px;
+  height: 100px;
+  background-color: grey;
+  margin: 20px;
+}
+
 
 
 	
